# FlowDenoising

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg_
docker/: Dockerfile_cuda  Dockerfile_ubuntu  access_cuda_container.sh  generate_image_nvidia.sh  generate_image_opencv.sh
scripts/: Compare_RFI_methods_smallvol.ipynb  Compare_RFI_vs_orginal_res_largevol.ipynb  Compare_RFI_vs_original_res_largevol.ipynb  Compare_RFI_vs_original_res_small.ipynb  Compare_RFI_vs_original_res_small_module.ipynb  create_tempdata.ipynb  denoise_random_ints.ipynb  denoise_site_data.ipynb  other_tests.ipynb  pamper_me.sh  run_flowdenoise_largevol_shell.ipynb  stress_me.sh  test_flowdenoiseRFI.ipynb  test_flowdenoiseRFI_shell.ipynb  test_flowdenoiseRFI_subpMP.ipynb  test_flowdenoiseRFI_subpMP_shell.ipynb  test_flowdenoiseRFI_subpMP_shell_linux.ipynb  test_flowdenoiseRFI_threaded.ipynb  test_flowdenoiseRFI_threaded_largevol.ipynb  test_flowdenoiseRFI_threaded_shell.ipynb  test_me.sh  test_package.ipynb
src/: flowdenoising.py  flowdenoisingRFI.py  flowdenoisingRFI_threaded.py
src/flowdenoising/: __init__.py  _flowdenoising_subprocessMP.py  flowdenoising.py  flowdenoising_GPU.py  flowdenoising_GPU2.py  flowdenoising_mod.py  flowdenoising_sequential.py  shared_code.py
